# vtpipeline-rs

./: Cargo.toml  README.md
cron.d/: hashes  scans
data/: avs.json  file_thresholds.json
example/: vt.toml
src/: config.rs  lib.rs  main.rs
