[package]
name = "vtpipeline"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Richard Zak <rjzak@lps.umd.edu>", "Robert Joyce <rjjoyce@lps.umd.edu>", "Maya Fuchs <mfuchs@lps.umd.edu>", "Elliott Zaresky-Williams <evzares@lps.umd.edu>"]
keywords = ["cybersecurity", "malware", "malware-research", "virustotal"]
categories = ["command-line-utilities", "science"]
description = "Collect files and anti-virus reports from VirusTotal to build your own collection of malicious and benign files."
repository = "https://github.com/FutureComputing4AI/vtpipeline-rs/"
build = "build.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env", "help", "usage"] }
constcat = { version = "0.6.0", default-features = false }
dashmap = { version = "6.1.0", features = ["inline"], default-features = false }
malwaredb-virustotal = { version = "0.5.0", features = ["clap", "chrono", "tokio"] }
rand = { version = "0.9.1", features = ["std"] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
serde_variant = "0.1.3"
tlsh-fixed = { version = "0.1.1", default-features = false }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8", features = ["parse"] }
tracing = { version = "0.1.41", features = ["max_level_info", "release_max_level_warn"] }
tracing-subscriber = { version = "0.3.19", features = ["ansi", "env-filter", "fmt", "json"] }

[target.'cfg(target_env = "musl")'.dependencies]
malwaredb-virustotal = { version = "0.5.0", features = ["clap", "chrono", "native-tls-vendored", "tokio"] }

[build-dependencies]
vergen = { version = "9.0.6", features = ["build"] }
vergen-gitcl = { version = "1.0.8", features = ["build"] }

[package.metadata.deb]
depends = "$auto"
priority = "optional"
section = "World Wide Web"
assets = [
    ["target/release/vtpipeline", "usr/local/sbin/vtpipeline", "755"],
    ["example/vt.toml", "/etc/vtpipeline/vt.toml", "600"],
    ["cron.d/hashes", "/etc/cron.d/vtpipelinehashes", "644"],
    ["cron.d/scans", "/etc/cron.d/vtpipelinescans", "644"],
    ["README.md", "usr/local/share/doc/vtpipeline/README.md", "644"],
]
conf-files = ["/etc/vtpipeline/vt.toml"]

[profile.release]
incremental = false
codegen-units = 1
lto = true
strip = true
